--- a/src/main/java/br/com/vitrinidatasoft/view/MainMenu.form
+++ b/src/main/java/br/com/vitrinidatasoft/view/MainMenu.form
@@ -24,6 +24,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuItemProduto">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/images/icon_menu_produtos.png"/>
+                </Property>
                 <Property name="actionCommand" type="java.lang.String" value="OPEN_FORM_PRODUTO"/>
                 <Property name="label" type="java.lang.String" value="Produto"/>
                 <Property name="name" type="java.lang.String" value="menuItemProduto" noResource="true"/>
@@ -34,6 +37,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuItemPedido">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/images/icon_menu_pedido.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Pedido"/>
                 <Property name="actionCommand" type="java.lang.String" value="OPEN_FORM_PEDIDO"/>
                 <Property name="name" type="java.lang.String" value="menuItemPedido" noResource="true"/>
@@ -271,7 +277,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnSair">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Sair"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/images/icon_sair.png"/>
+        </Property>
         <Property name="actionCommand" type="java.lang.String" value="EXIT_SYSTEM"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[153, 129]"/>
