--- a/src/main/java/br/com/vitrinidatasoft/view/FormProduto.form
+++ b/src/main/java/br/com/vitrinidatasoft/view/FormProduto.form
@@ -225,7 +225,7 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/images/icon_client.png"/>
+              <Image iconType="3" name="/images/camera.png"/>
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
