--- a/src/main/resources/report/Pedido.jrxml
+++ b/src/main/resources/report/Pedido.jrxml
@@ -2,168 +2,259 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Pedido" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5d42c5f8-4c55-4205-9501-1745a0c7d639">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="39"/>
+	<property name="ireport.y" value="56"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["D:\\Java\\scap_diego\\src\\main\\resources\\report\\"]]></defaultValueExpression>
 	</parameter>
 	<field name="cliente.nome" class="java.lang.String"/>
 	<field name="cliente.rg" class="java.lang.String"/>
 	<field name="cliente.cpf" class="java.lang.String"/>
+	<field name="cliente.telefones" class="java.util.Collection"/>
 	<field name="numero" class="java.lang.String"/>
 	<field name="dataPedido" class="java.util.Calendar"/>
-	<field name="dataEntrega" class="java.util.Date"/>
+	<field name="dataEntrega" class="java.util.Calendar"/>
 	<field name="endereco" class="java.lang.String"/>
 	<field name="itens" class="java.util.Collection"/>
+	<field name="observacao" class="java.lang.String"/>
+	<field name="desconto" class="java.lang.Float"/>
+	<field name="valor" class="java.lang.Float"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
 		<band height="134" splitType="Stretch">
 			<image>
-				<reportElement x="6" y="5" width="101" height="69" uuid="319ae3fa-6923-43ff-8a66-4cf24030acef"/>
-				<imageExpression><![CDATA["D:\\Java\\scap_diego\\src\\main\\resources\\images\\logo.jpg"]]></imageExpression>
+				<reportElement x="6" y="5" width="148" height="126" uuid="319ae3fa-6923-43ff-8a66-4cf24030acef"/>
+				<imageExpression><![CDATA["C:\\Program Files\\scap\\images\\logo.jpg"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="131" y="5" width="372" height="32" uuid="50c1495b-a2ee-48ef-889a-8af9b8c7f585"/>
+				<reportElement x="151" y="6" width="372" height="32" uuid="50c1495b-a2ee-48ef-889a-8af9b8c7f585"/>
 				<textElement textAlignment="Center">
 					<font size="24" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Contrato de Aluguel de Material]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="131" y="37" width="372" height="37" uuid="21e59f7d-fe13-4b0c-9664-d40552fd0e7f"/>
+				<reportElement x="151" y="38" width="372" height="37" uuid="21e59f7d-fe13-4b0c-9664-d40552fd0e7f"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Locação de mesas, cadeiras, toalhas, louças, tendas e climatizadores]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="131" y="74" width="372" height="14" uuid="709c4526-0797-4011-86a1-3f82111dd947"/>
+				<reportElement x="151" y="75" width="372" height="14" uuid="709c4526-0797-4011-86a1-3f82111dd947"/>
 				<textElement textAlignment="Center"/>
-				<text><![CDATA[Rua Marquês de Muritiba,  600 - Parque das Laranjeiras - Manaus - AM]]></text>
+				<text><![CDATA[Rua Marquês de Muritiba,  10 - Parque das Laranjeiras - Manaus - AM]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="131" y="88" width="372" height="28" uuid="63611923-afc6-4b8c-b573-976d00f5ea42"/>
+				<reportElement x="151" y="89" width="372" height="28" uuid="63611923-afc6-4b8c-b573-976d00f5ea42"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[3642-4830 / 99206-5067 / 98126 - 8081]]></text>
+				<text><![CDATA[3642-4830 / 99206-5067 / 98126-8081 / 99278-4458]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="131" y="116" width="372" height="15" uuid="f5686858-77ff-4204-bf08-7cb50539129c"/>
+				<reportElement x="151" y="117" width="372" height="15" uuid="f5686858-77ff-4204-bf08-7cb50539129c"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[limatendaseventos@gmail.com]]></text>
 			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="103" splitType="Stretch">
+		<band height="124" splitType="Stretch">
 			<textField>
-				<reportElement x="90" y="10" width="264" height="20" uuid="c11c7fed-bbd6-43df-a153-dc12fd4788ca"/>
+				<reportElement x="90" y="31" width="237" height="20" uuid="c11c7fed-bbd6-43df-a153-dc12fd4788ca"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cliente.nome}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="18" y="10" width="72" height="20" uuid="3b439776-576f-4cbd-8893-e281582f8b2b"/>
+				<reportElement x="18" y="31" width="72" height="20" uuid="3b439776-576f-4cbd-8893-e281582f8b2b"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cliente:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="404" y="10" width="34" height="20" uuid="ce65b9c9-e6f1-4fc6-83df-e3d12606bd4f"/>
+				<reportElement x="338" y="31" width="100" height="20" uuid="ce65b9c9-e6f1-4fc6-83df-e3d12606bd4f"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Data:]]></text>
+				<text><![CDATA[Data do evento:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="18" y="40" width="72" height="20" uuid="af8b0eef-5ba7-4318-a392-b8397ce72a7d"/>
+				<reportElement x="18" y="55" width="72" height="20" uuid="af8b0eef-5ba7-4318-a392-b8397ce72a7d"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Endereço:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="90" y="40" width="448" height="20" uuid="0105a067-0ec6-4cff-a545-c65733f2e464"/>
+				<reportElement x="90" y="55" width="237" height="34" uuid="0105a067-0ec6-4cff-a545-c65733f2e464"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{endereco}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement x="438" y="10" width="100" height="20" uuid="028f8c93-a56d-49bf-b85c-63d711f64425"/>
+				<reportElement x="438" y="31" width="100" height="20" uuid="028f8c93-a56d-49bf-b85c-63d711f64425"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new SimpleDateFormat("dd/MM/yyyy").format($F{dataPedido}.getTime())]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new SimpleDateFormat("dd/MM/yyyy").format($F{dataEntrega}.getTime())]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="18" y="70" width="72" height="20" uuid="8707c394-62dd-43d4-be7c-762005b11dc9"/>
+				<reportElement x="18" y="99" width="72" height="20" uuid="8707c394-62dd-43d4-be7c-762005b11dc9"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[RG / I.E.:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="90" y="70" width="100" height="20" uuid="e3cb0174-7c4e-4cd5-9c70-8847d01b94a9"/>
+				<reportElement x="90" y="99" width="100" height="20" uuid="e3cb0174-7c4e-4cd5-9c70-8847d01b94a9"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cliente.rg}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="256" y="70" width="82" height="20" uuid="86894f9c-5366-49d6-90cc-59f1d5105c55"/>
+				<reportElement x="256" y="99" width="82" height="20" uuid="86894f9c-5366-49d6-90cc-59f1d5105c55"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[CPF / CNPJ:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="338" y="70" width="200" height="20" uuid="d6dcbeb2-4965-4f55-9ac9-da094e5d1a73"/>
+				<reportElement x="338" y="99" width="200" height="20" uuid="d6dcbeb2-4965-4f55-9ac9-da094e5d1a73"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cliente.cpf}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="1" y="98" width="554" height="1" uuid="9865edcb-79e4-4bae-aabc-b2c0f898c673"/>
+				<reportElement x="0" y="122" width="554" height="1" uuid="9865edcb-79e4-4bae-aabc-b2c0f898c673"/>
 			</line>
+			<staticText>
+				<reportElement x="338" y="55" width="100" height="20" uuid="6248d9cc-821e-4b5f-8775-cd22efc4c1fc"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Telefones]]></text>
+			</staticText>
+			<subreport>
+				<reportElement x="438" y="55" width="100" height="34" uuid="483d6da1-ff17-43ac-ab79-0db247796bba"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{cliente.telefones})]]></dataSourceExpression>
+				<subreportExpression><![CDATA["C:\\Program Files\\scap\\report\\ClientReport_Subreport.jasper"]]></subreportExpression>
+			</subreport>
+			<staticText>
+				<reportElement x="387" y="6" width="51" height="20" uuid="3d0c51fb-9355-42f2-a4e3-6ca3415a43a2"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Pedido:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="438" y="6" width="100" height="20" uuid="dcb1cbfe-9157-4f14-8c29-f78d168732e9"/>
+				<textElement>
+					<font size="12" isBold="true" isUnderline="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{numero}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="56" splitType="Stretch">
+		<band height="37" splitType="Stretch">
 			<subreport>
-				<reportElement x="1" y="4" width="554" height="41" uuid="bc2bd77c-4f03-490d-9086-5a43ba1ae57f"/>
+				<reportElement x="1" y="2" width="554" height="33" uuid="bc2bd77c-4f03-490d-9086-5a43ba1ae57f"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{itens})]]></dataSourceExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "PedidoItem_Subreport.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA["C:\\Program Files\\scap\\report\\PedidoItem_Subreport.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
-	<summary>
-		<band height="57" splitType="Stretch">
+	<lastPageFooter>
+		<band height="280">
+			<textField pattern="" isBlankWhenNull="false">
+				<reportElement x="486" y="0" width="69" height="20" uuid="cc208785-17a7-4f62-8f84-9436fb3024bd"/>
+				<textElement textAlignment="Right">
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new DecimalFormat ("#,##0.00").format($F{desconto})]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="427" y="0" width="59" height="20" uuid="55e4b429-8538-4473-8acb-b699f6656a49"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Desconto]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="486" y="20" width="69" height="20" uuid="bc2e7312-0ef3-49f5-b267-95852ad1aeac"/>
+				<textElement textAlignment="Right">
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new DecimalFormat("#,##0.00").format($F{valor} - $F{desconto})]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="427" y="20" width="59" height="20" uuid="9ee1005b-d7f7-47ce-a6eb-213e2bc9d439"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="1" y="40" width="100" height="20" uuid="a4977127-c3a4-46dc-860e-b9602e2dda47"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Observação]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="6" y="60" width="545" height="60" uuid="a3076386-7e4a-4b9d-8e51-39570bf27e08"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{observacao}]]></textFieldExpression>
+			</textField>
+			<rectangle>
+				<reportElement x="1" y="120" width="554" height="20" forecolor="#FFFFFF" backcolor="#0066FF" uuid="10c9b281-879a-46c6-95df-0dfd940d2337"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="1" y="120" width="554" height="20" forecolor="#FFFFFF" uuid="4e0bbe50-aaf7-44af-bcf1-5f775ab6776a"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[PAGAMENTO NO ATO DA ENTREGA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="6" y="140" width="545" height="74" uuid="46579d72-5d16-4e0a-baa4-9a8f7e846f9f"/>
+				<textElement>
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Eu estou ciente do material recebido, e que qualquer dano ou extravio do material da empresa LIMA EVENTOS, será cobrado o valor real de cada peça.
+OBS.: Ultrapassado o prazo da entrega pagarei outro aluguel.
+Não fazemos recolhimento de material aos domingos.]]></text>
+			</staticText>
 			<line>
-				<reportElement x="42" y="24" width="172" height="1" uuid="e81c09f2-cdf6-4876-a483-12f2caa95ae5"/>
+				<reportElement x="27" y="251" width="172" height="1" uuid="e81c09f2-cdf6-4876-a483-12f2caa95ae5"/>
 			</line>
 			<staticText>
-				<reportElement x="42" y="30" width="172" height="21" uuid="434de632-dbe4-4813-9e0a-70ff0a96627a"/>
+				<reportElement x="27" y="257" width="172" height="21" uuid="434de632-dbe4-4813-9e0a-70ff0a96627a"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Prazo de Entrega]]></text>
 			</staticText>
 			<line>
-				<reportElement x="256" y="25" width="282" height="1" uuid="3ac96a1f-72a3-4fb5-8015-907d0a012648"/>
+				<reportElement x="241" y="252" width="282" height="1" uuid="3ac96a1f-72a3-4fb5-8015-907d0a012648"/>
 			</line>
 			<staticText>
-				<reportElement x="256" y="31" width="282" height="20" uuid="15db51ec-06bc-4b6d-9e5c-96e14a12acd7"/>
+				<reportElement x="241" y="258" width="282" height="20" uuid="15db51ec-06bc-4b6d-9e5c-96e14a12acd7"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Assinatura do Cliente]]></text>
 			</staticText>
 		</band>
-	</summary>
+	</lastPageFooter>
 </jasperReport>
